--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,4 +22,12 @@
 
         />
 
+    <TextView
+        android:id="@+id/display"
+        android:layout_width="match_parent"
+        android:layout_height="477dp"
+        android:layout_marginLeft="10px"
+        android:layout_marginTop="50px"
+        android:layout_marginRight="10px" />
+
 </LinearLayout>
